--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,7 @@
 rootProject.name = 'framboyan'
 
+sourceControl {
+    gitRepository("https://github.com/bakasoft/beat.git") {
+        producesModule("bakasoft:beat")
+    }
+}
